--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "concurrently \"yarn serve\" \"yarn watch\" -c blue,cyan --names serve,watch",
+    "serve": "nodemon dist/bin/www.js",
+    "deploy": "node dist/bin/www.js",
+    "build": "tsc",
+    "watch": "tsc --watch"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,5 +17,14 @@
     "morgan": "~1.9.1",
     "reflect-metadata": "^0.1.13",
     "typescript": "^4.3.5"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/debug": "^4.1.7",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^16.4.13",
+    "concurrently": "^6.2.0",
+    "nodemon": "^2.0.12"
   }
 }
