--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
     "concurrently": "^6.2.0",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
+    "prettier": "^2.3.2",
     "supertest": "^6.1.4",
     "ts-jest": "^27.0.4"
   },
   "jest": {
-    "moduleFileExtensions": ["ts", "js"],
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
     "transform": {
       "^.+\\.(ts|tsx)$": "ts-jest"
     },
