--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,5 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
