--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "test": "jest"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "inversify": "^5.1.1",
+    "inversify-express-utils": "^6.3.2",
     "morgan": "~1.9.1",
     "reflect-metadata": "^0.1.13",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.2",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
+    "@types/inversify-express-utils": "^2.0.0",
     "@types/jest": "^26.0.24",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.13",
