--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.13",
     "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
     "concurrently": "^6.2.0",
+    "eslint": "^7.32.0",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
