--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
         "es2021": true
     },
     "extends": [
+        "airbnb-typescript-prettier",
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended"
     ],
@@ -16,5 +17,9 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "no-restricted-syntax": "off",
+        "no-continue": "off",
+        "no-useless-constructor": "off",
+        "@typescript-eslint/no-useless-constructor": ["error"]
     }
 }
