--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "express": "~4.16.1",
     "inversify": "^5.1.1",
     "inversify-express-utils": "^6.3.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.1.4",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "@types/express": "^4.17.13",
     "@types/inversify-express-utils": "^2.0.0",
     "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.13",
     "@types/supertest": "^2.0.11",
@@ -31,10 +34,10 @@
     "@typescript-eslint/parser": "^4.29.0",
     "concurrently": "^6.2.0",
     "eslint": "^7.32.0",
+    "eslint-config-airbnb-typescript-prettier": "^4.2.0",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
-    "supertest": "^6.1.4",
     "ts-jest": "^27.0.4"
   },
   "jest": {
